testing/Travis/testcases/TypeChecker/shouldPass/Union.adl
CONTEXT UnionTypeCheck IN ENGLISH

PURPOSE CONTEXT UnionTypeCheck
{+ Test that union succeeds when both operands have the same signature.
   This verifies the type checker correctly accepts t[A*C] \/ (r;s)[A*C] yielding [A*C]. +}

RELATION r[A*B]
RELATION s[B*C]
RELATION t[A*C]
RELATION result[A*C]

RULE testUnion: result = t \/ (r;s)

ENDCONTEXT
